# zapssl

./: .gitignore  CMakeLists.txt  README.md  app_icon.png.h  cacert.h  convert_png_to_header.py  logger.cpp  logger.h  main.cpp  main_frame.cpp  main_frame.h  resources.rc  ssl_checker.cpp  ssl_checker.h
.github/workflows/: release.yml
resources/: CMakeLists.txt  cacert_resource.cpp  cacert_resource.cpp.in  cacert_resource.h
